Fixed horizontal line border stlyes so that it looks good on safari too. Note: on safari dotted does not produced rounded dots but squared off.

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ table {
 
 hr {
   display: block;
-  width: 30px;
+  width: 20px;
   height: 0px;
   border-color: #DBE2EF;
   border-style: dotted;
